<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D5D0D0"
    tools:context=".activities.DetailActivity">


    <ImageView
        android:id="@+id/imageView_detail"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:contentDescription="@string/banner_image"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="16dp"
        android:padding="16dp">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="100dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="0dp"
            app:contentPadding="16dp"
            app:strokeColor="@color/stroke_color"
            app:strokeWidth="1dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView_detail_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/details"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textColor="@color/black"
                    android:textSize="24sp" />

                <RatingBar
                    android:id="@+id/ratingBar_detail"
                    style="@android:style/Widget.Material.RatingBar.Small"
                    android:layout_width="wrap_content"

                    android:layout_height="wrap_content"
                    android:progressTint="#F9A825" />


                <TextView
                    android:id="@+id/textView_description"
                    android:layout_width="match_parent"
                    android:layout_height="158dp"
                    android:layout_marginTop="8dp"
                    android:text=""
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                    tools:text="Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic" />


                <LinearLayout
                    android:baselineAligned="false"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="12dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="8dp"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:orientation="vertical"

                        android:padding="8dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/date"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                            android:textColor="?attr/colorPrimary"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/tv_date"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:text=""
                            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                            android:textSize="16sp" />


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="8dp"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:orientation="vertical"
                        android:padding="8dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/time"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                            android:textColor="?attr/colorPrimary"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/tv_time"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"

                            android:layout_gravity="center_horizontal"
                            android:text=""
                            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                            android:textSize="16sp" />


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="8dp"
                        android:layout_weight="1"
                        android:gravity="center_horizontal"
                        android:orientation="vertical"
                        android:padding="8dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/venue"
                            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                            android:textColor="?attr/colorPrimary"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/tv_venue"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"

                            android:layout_gravity="center_horizontal"
                            android:text=""
                            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                            android:textSize="16sp" />


                    </LinearLayout>


                </LinearLayout>

                <LinearLayout
                    android:id="@+id/price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="8dp"
                    android:padding="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/currency"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/detail_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        tools:text="50.00"
                        android:text=""
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                        android:textSize="20sp" />


                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_book"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    style="@style/Widget.MaterialComponents.Button"
                    android:text="@string/book_event_btn_txt" />

                <Button
                    android:id="@+id/button_add"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/save_btn_txt"
                    app:icon="@drawable/ic_baseline_favorite_24" />

            </LinearLayout>


        </com.google.android.material.card.MaterialCardView>


    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>